--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@google/genai": "^1.13.0",
     "lucide-react": "^0.539.0",
     "recharts": "^3.1.2",
-    "react-dropzone": "^14.3.8"
+    "react-dropzone": "^14.3.8",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
