--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.1.1",
-    "react": "^19.1.1",
-    "@google/genai": "^1.13.0",
-    "lucide-react": "^0.539.0",
-    "recharts": "^3.1.2",
-    "react-dropzone": "^14.3.8",
-    "node-fetch": "^2.7.0"
-  },
+  "@emotion/react": "^11.11.4",
+  "@emotion/styled": "^11.11.5",
+  "@mui/material": "^5.15.20",
+  "firebase": "^10.12.2",
+  "react": "^18.3.1",
+  "react-dom": "^18.3.1",
+  "react-router-dom": "^6.23.1"
+},
   "devDependencies": {
     "@types/node": "^22.14.0",
     "typescript": "~5.8.2",
