--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "firebase": "^10.12.2",
   "react": "^18.3.1",
   "react-dom": "^18.3.1",
-  "react-router-dom": "^6.23.1"
+  "react-router-dom": "^6.23.1",
+  "papaparse": "^5.4.1",
+  "string-similarity": "^4.0.4"
 },
   "devDependencies": {
     "@types/node": "^22.14.0",
