--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "@emotion/styled": "^11.11.5",
   "@mui/material": "^5.15.20",
   "firebase": "^10.12.2",
+  "lucide-react": "^0.400.0",
+  "papaparse": "^5.4.1",
   "react": "^18.3.1",
   "react-dom": "^18.3.1",
+  "react-dropzone": "^14.2.3",
   "react-router-dom": "^6.23.1",
-  "papaparse": "^5.4.1",
-  "string-similarity": "^4.0.4",
-  "lucide-react": "^0.400.0"
+  "string-similarity": "^4.0.4"
 },
   "devDependencies": {
     "@types/node": "^22.14.0",
