--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
   "@emotion/react": "^11.11.4",
   "@emotion/styled": "^11.11.5",
+  "@google/genai": "^0.14.0",
   "@mui/material": "^5.15.20",
   "firebase": "^10.12.2",
   "lucide-react": "^0.400.0",
