--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,16 +5,19 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+
+    "jsx": "react-jsx",
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
+
+    "strict": true,
+
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    },
-    "strict": true
+    }
   },
   "include": ["src"]
 }
